// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Extensions renders correctly with empty extensions 1`] = `
<RCTScrollView
  accessibilityLabel="Extensions"
  style={
    {
      "backgroundColor": "#FFFBFE",
      "flexGrow": 0,
      "flexShrink": 1,
      "minWidth": 0,
      "padding": 10,
    }
  }
>
  <View />
</RCTScrollView>
`;

exports[`Extensions renders correctly with extensions 1`] = `
<RCTScrollView
  accessibilityLabel="Extensions"
  style={
    {
      "backgroundColor": "#FFFBFE",
      "flexGrow": 0,
      "flexShrink": 1,
      "minWidth": 0,
      "padding": 10,
    }
  }
>
  <View>
    Button: Extension One
    Button: Extension Two
  </View>
</RCTScrollView>
`;
